프로필 전체적인 틀과 프로필 사진

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>송승규 프로필</title>
+    <!--  
+      <script src="폰트어썸" crossorigin="anonymous"></script>  
+    -->
+    <link rel="stylesheet" href="css/style.css" />
+    <script defer src="js/temp.js"></script>
+    <!--js 파일 이름 바꾸기-->
   </head>
+  <header>
+    <h1>송승규 프로필</h1>
+    <nav>
+      <ul>
+        <li>2020204066</li>
+        <li>송승규</li>
+      </ul>
+    </nav>
+  </header>
   <body>
-    저를 소개합니다.
+    <section>
+      <article class="profile_picture">
+        <img src="img/나중에_내사진으로_바꿀예정.jpg" alt="송승규 사진" />
+        <div>
+          <h1>송승규</h1>
+          <h2>정보융합학부</h2>
+        </div>
+        <div class="introduction">
+          <p>자기소개 옆으로 정렬</p>
+        </div>
+      </article>
+    </section>
   </body>
 </html>
