--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>송승규 프로필</title>
+    <script
+      src="https://kit.fontawesome.com/e7e3c6f6db.js"
+      crossorigin="anonymous"
+    ></script>
     <!--  
       <script src="폰트어썸" crossorigin="anonymous"></script>  
     -->
@@ -33,15 +37,15 @@
           </div>
         </article>
         <div class="info">
-          <!--<h1>송승규</h1>
-          <h2>정보융합학부</h2>-->
+          <h1>송승규</h1>
+          <h2>정보융합학부</h2>
           <ul class="contact">
             <li>
-              <i class="fab fab fa-facebook-f"></i>
+              <i class="fas fas fas fas fa-phone-volume"></i>
               <span>010-6285-7031</span>
             </li>
             <li>
-              <i class="fab fab fa-facebook-f"></i>
+              <i class="fas far fa-envelope"></i>
               <span>sorim831@naver.com</span>
             </li>
           </ul>
@@ -50,7 +54,7 @@
 
       <section id="guestbook">
         <h2>방명록</h2>
-        <form>
+        <form id="guestbook_form">
           <input type="text" id="name" placeholder="이름" required />
           <textarea id="message" placeholder="메시지" required></textarea>
           <button type="submit">방명록 남기기</button>
