백앤드 요소 추가

--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
       src="https://kit.fontawesome.com/e7e3c6f6db.js"
       crossorigin="anonymous"
     ></script>
-    <!--  
-      <script src="폰트어썸" crossorigin="anonymous"></script>  
-    -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    >
     <link rel="stylesheet" href="css/style.css" />
-    <script defer src="js/temp.js"></script>
-    <!--js 파일 이름 바꾸기-->
+    <script defer src="js/guestbook.js"></script>
   </head>
   <header>
     <h1>송승규 프로필</h1>
