디자인 마무리, docker 배포

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       <div class="viewBox">
         <div class="slideBox">
           <div class="leftBox">
-            <div class="slideItem">Front-end</div>
-            <div class="slideItem">Back-end</div>
-            <div class="slideItem">Data science</div>
+            <div class="slideItem">Front-End</div>
+            <div class="slideItem">Back-End</div>
+            <div class="slideItem">Data Science</div>
           </div>
           <div class="rightBox">
-            <div class="slideItem">Front-end</div>
-            <div class="slideItem">Back-end</div>
-            <div class="slideItem">Data science</div>
+            <div class="slideItem">Front-End</div>
+            <div class="slideItem">Back-End</div>
+            <div class="slideItem">Data Science</div>
           </div>
         </div>
       </div>
@@ -46,26 +46,21 @@
           <img src="media/profile_picture.jpg" alt="송승규 사진" />
           <div class="introduction">
             <p>
-              광운대학교 인공지능융합대학 정보융합학부 3학년 재학중에 있습니다.
-              프론트앤드, 백앤드, 데이터분석 등 다양한 직무에 대해 관심을 갖고
-              있으며 진로를 결정 중에 있습니다. 컴퓨터공학과 인간공학의
-              융합연구를 수행하여 박사학위를 받았습니다. 그래서 여기에서 줄을 더
-              추가하면 얼마나 되는지 알아보고 만약에 글자수가 너무 많으면 디자인
-              잧에가 이상해지는 경우를 바잊하기 위해서 그랒 수도 조정해야 할 것
-              같습니다. 여기에서 더 글자수를 늘리면 어떻게 될까? 이런거
-              고려하면서 나에 대한 어떤 부분을 소개하고, 등등 뭐 그런걸 잘
-              정해야겠습니다.아 여기가 늘어나네. 오케이 알겠습니다. 이거 이제
-              수정하자. 창업, 벤처인큐베이팅, 대기업의 다양한 근무 경험을 살려
-              지금은 인간-컴퓨터 상호작용, 인공지능 서비스, 디지털경험분석
-              분야의 실용적인 교육과 연구를 수행하고 있습니다. 현재, 사용자
-              경험의 관점에서 인공지능 소프트웨어를 설계/기획, 분석, 개발하는
-              IDEA 연구실을 운영하고 있습니다. [ENG]
+              저는 광운대학교 인공지능융합대학 정보융합학부 3학년 재학중입니다.
+              프론트엔드, 백엔드, 데이터분석 등 다양한 직무에 대해 관심을 갖고
+              있으며 진로를 결정 중에 있습니다. 현재, Python, Javascript와 같은
+              다양한 프로그래밍 언어 지식을 습득하고 있습니다. 이러한 지식을
+              바탕으로 현재 데이터 분석, 프론트엔드, 백엔드를 활용한
+              프로젝트들을 진행하는 있습니다. 이번 학기 이후 동아리
+              <strong>CHIC</strong>에 가입하여 백엔드 직무에 대해 더 지식을
+              넓히고 방학 때 이와 관련된 토이 프로젝트를 진행하는 것을 계획하고
+              있습니다.
             </p>
           </div>
         </article>
         <div class="info">
           <h1>송승규</h1>
-          <h2>정보융합학부</h2>
+          <h2>인공지능융합대학 정보융합학부</h2>
           <ul class="contact">
             <li>
               <i class="fas fas fas fas fa-phone-volume"></i>
