--- a/front-end/index.html
+++ b/front-end/index.html
@@ -86,5 +86,5 @@
     </main>
     <footer><p>송승규ⓒKWANGWOON UNIVERSITY.</p></footer>
   </body>
-  <video src="media/봄의소리왈츠.mp3" autoplay></video>
+  <!--  <audio src="media/봄의소리왈츠.mp3" autoplay></audio>   -->
 </html>
